--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="react-modal"></div>
+    <div id="react-modals"></div>
     <div id="react-popup"></div>
   </body>
 </html>
